# promptdust

./: .cz.toml  .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSING.md  Makefile  NOTICE  README.md  SECURITY.md  deny.toml  justfile
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  false_positive.md  new_definition.md
.github/scripts/: check_gui_readonly.sh  check_no_network.sh  check_no_telemetry.sh  package-cli.sh  path_drift_canary.py  validate_signatures.py  verdict_lint.sh
.github/workflows/: canary.yml  ci.yml  e2e.yml  notify-website.yml  release.yml
brand/: README.md
cli/: Cargo.toml
cli/src/: main.rs  output.rs  render.rs
cli/tests/: cli.rs
core/: Cargo.toml
core/definitions/: _template.json  browsers.json  claude-code.json  cli-agents.json  coding-tools.json  cursor.json  desktop-apps.json  ide-tools.json  local-runtimes.json  vscode-copilot.json
core/definitions/schema/: definition.schema.json
core/src/: definitions.rs  detect.rs  inspect.rs  lib.rs  model.rs  output.rs  platform.rs  redact.rs  report.rs  resolve.rs  scan.rs  score.rs
core/src/score/: assurance.rs  policy.rs
core/tests/: amplifiers.rs  catalog.rs  explainability.rs  invariants.rs  path_liveness.rs  perf.rs  reliability.rs  scoring_golden.rs
core/tests/common/: mod.rs
core/tests/golden/scoring/: README.md  scenarios.json  score_reference.py  scoring_model.yaml
desktop/e2e/: .gitignore  README.md  package-lock.json  package.json  playwright.config.js  serve.mjs
desktop/e2e/app-smoke/: fixture.mjs  package.json  wdio.conf.js
desktop/e2e/app-smoke/features/: smoke.feature
desktop/e2e/app-smoke/steps/: smoke.steps.js
desktop/e2e/features/: detail.feature  export.feature  feedback.feature  findings.feature  inbox.feature  scan.feature
desktop/e2e/steps/: steps.js
desktop/e2e/support/: data.js  fakeBackend.js  fixtures.js
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: history.rs  lib.rs  main.rs  share.rs
desktop/ui/: index.html  main.js  main.test.mjs  panel.mjs  panel.test.mjs  render.mjs  render.test.mjs  styles.css
docs/: INSTALL.md  PRIVACY.md  TELEMETRY.md  USER-GUIDE.md
packaging/homebrew/: promptdust-formula.rb  promptdust.rb
packaging/winget/: PromptDust.PromptDust.installer.yaml  PromptDust.PromptDust.locale.en-US.yaml  PromptDust.PromptDust.yaml
telemetry/: Cargo.toml
telemetry/src/: lib.rs
telemetry/tests/: payload_clean.rs
