[package]
name = "promptdust-telemetry"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Opt-in, anonymous usage-telemetry client for the promptdust front-ends (no networking, stubbed sender)"

[lints]
workspace = true

[dependencies]
promptdust-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dirs = "6"
# OS entropy for the per-run random id. NOT a networking or analytics crate; front-end only.
getrandom = "0.4"

[dev-dependencies]
tempfile = "3"
